# SkillBoxSearch

./: CMakeLists.txt  ConfigLoader.h  Inverted_index.h  README.md  Search.h  config.json  main.cpp
config/: answers.json  config.json  file1.txt  file2.txt  file4.txt  requests.json
include/: ConfigLoader.h  Inverted_index.h  Search.h
src/: CMakeLists.txt  ConfigLoader.cpp  Inverted_index.cpp  main.cpp
tests/: CMakeLists.txt  ConfigLoader_test.cpp  InvertedIndex_test.cpp
